# Multi-Component-Compression-Framework

./: CMakeLists.txt  README.md  build_script.sh  main.cpp  main.cu  run_script.sh  run_script_cpu.sh  run_script_gpu_mgard.sh  run_script_gpu_zfp.sh  testCPUCompressors.cpp  testMGARDCompressor.cpp  testZFPCompressor.cpp
build_scripts/: build_cuda_hooper.sh
include/: CPUSZCompressor.hpp  CPUZFPCompressor.h  GPUCompressor.hpp  GPUMGARDCompressor.hpp  GPUSZCompressor.hpp  GPUZFPCompressor.hpp  GeneralCompressor.hpp  ProgressiveCompressor.hpp  ProgressiveCompressorCPU.hpp  ProgressiveCompressorGPUMGARD.hpp  ProgressiveCompressorGPUZFP.hpp
src/: main.cu
